--- a/style.css
+++ b/style.css
@@ -25,13 +25,14 @@ body {
 .link {
     padding: 0.5rem 0.75rem 0.5rem 0.75rem;
     text-decoration: none;
-    margin-top: 20rem;
+    margin-top: 2rem;
 
 }
 
 .primary-link {
-    
-    background-color: var(--primary-color);
+    background: linear-gradient(90deg, #00d2ff 0%, #3a47d5 100%);
+
+    /* background-color: var(--primary-color); */
     text-decoration: none;
     border-radius: 0.5rem;
     color: white;
@@ -67,7 +68,8 @@ hr {
 }
 
 .navigation {
-    background-color: var(--primary-color);
+    background: linear-gradient(90deg, #00d2ff 0%, #3a47d5 100%);
+    /* background-color: var(--primary-color); */
     color: white;
     padding: 1rem;
     border-bottom-left-radius: 1rem;
@@ -133,7 +135,7 @@ hr {
 
 
 .footer{
-    background-color: var(--primary-color);
+    background: linear-gradient(90deg, #00d2ff 0%, #3a47d5 100%);
     border-top-right-radius: 1rem;
     padding: 2rem;
     text-align: center;
@@ -165,7 +167,7 @@ hr {
     padding-bottom: 0.5rem;
 }
 
-.angle-input{
+.angle-input, .side-input{
 
     display: block;
     margin: auto;
@@ -173,6 +175,8 @@ hr {
     border-color: var(--primary-color);
     
 }
+
+
 
 .section label{
     text-align: center;
