--- a/style.css
+++ b/style.css
@@ -191,4 +191,4 @@ hr {
 }
 
 html, body {padding:0; margin:0; height:100%;}
-footer{position: absolute; bottom: 0; left: 0; right: 0;}
+footer{position: fixed; bottom: 0; left: 0; right: 0;}
