--- a/style.css
+++ b/style.css
@@ -190,5 +190,5 @@ hr {
     margin-top: 5rem;
 }
 
-html, body {padding:0; margin:0; height:100%;}
-footer{position: absolute; bottom: 0; left: 0; right: 0;}
+/* html, body {padding:0; margin:0; height:100%;}
+footer{position: absolute; bottom: 0; left: 0; right: 0;} */
